--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "preview": "astro preview",
     "start": "astro dev"
   },
+  "dependencies": {
+    "moment": "^2.30.1"
+  },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@prettier/plugin-xml": "^3.2.2",
