--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,5 @@
   "printWidth": 100,
   "semi": false,
   "singleQuote": true,
-  "plugins": ["@prettier/plugin-xml", "prettier-plugin-astro", "prettier-plugin-tailwindcss"]
+  "plugins": ["@prettier/plugin-xml", "prettier-plugin-tailwindcss"]
 }
