--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "astro": "astro",
-    "build": "astro build",
-    "dev": "astro dev",
+    "build": "vite build",
+    "dev": "vite",
     "format": "prettier --write .",
     "lint": "eslint --ext .js",
     "lint:styles": "stylelint --fix 'src/styles/**/*.scss'",
-    "preview": "astro preview",
-    "start": "astro dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "moment": "^2.30.1"
@@ -18,7 +16,6 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@prettier/plugin-xml": "^3.2.2",
-    "astro": "^4.1.2",
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.3",
     "eslint": "^8.56.0",
@@ -30,7 +27,6 @@
     "postcss-import": "^16.0.0",
     "postcss-sort-media-queries": "^5.2.0",
     "prettier": "^3.2.1",
-    "prettier-plugin-astro": "^0.12.3",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.69.7",
     "stylelint": "^16.1.0",
@@ -38,6 +34,7 @@
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-prettier": "^5.0.0",
     "stylelint-scss": "^6.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.11"
   }
 }
