--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "datatables.net-dt": "^1.13.8",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1"
   },
   "devDependencies": {
